# system-cleaner

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: ARCHITECTURE.md  CONTRIBUTING.md  SAFETY.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cleanup.rs  disk.rs  memory.rs  mod.rs  recommendations.rs  startup.rs
src/components/: Dashboard.tsx  DiskCleanup.tsx  MemoryPanel.tsx  Recommendations.tsx  StartupManager.tsx
src/lib/: api.ts  format.ts  types.ts
src/styles/: tokens.css
