[package]
name = "system-cleaner"
version = "1.0.0"
description = "Windows System Health Tool"
authors = ["TMHSDigital"]
edition = "2021"

[lib]
name = "system_cleaner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
winreg = "0.55"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_SystemInformation",
  "Win32_Storage_FileSystem",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_Security",
] }
